--- a/Game/Game.vcxitems.filters
+++ b/Game/Game.vcxitems.filters
@@ -22,6 +22,9 @@
     <Filter Include="Shaders">
       <UniqueIdentifier>{6a2a538f-2831-4050-8778-1e38c948529c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Cinema 4D">
+      <UniqueIdentifier>{7481a4b3-0ff4-4bdc-8be9-aada25179423}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MSBuildThisFileDirectory)Sources\Gamepad.cpp">
@@ -39,9 +42,6 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Sources\Renderer.cpp">
       <Filter>Sources\Rendering</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)Sources\ShaderResource.cpp">
-      <Filter>Sources\Resources</Filter>
-    </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)Sources\Storage.cpp">
       <Filter>Sources\Utils</Filter>
     </ClCompile>
@@ -51,7 +51,19 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Sources\ConstantBufferResource.cpp">
       <Filter>Sources\Resources</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)Sources\MeshResource.cpp">
+    <ClCompile Include="$(MSBuildThisFileDirectory)Sources\BufferResources.cpp">
+      <Filter>Sources\Resources</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Sources\InputLayoutResource.cpp">
+      <Filter>Sources\Resources</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Sources\ResourceGroup.cpp">
+      <Filter>Sources\Resources</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\franc\Documents\Visual Studio 2017\Projects\WiredPickup\Game\Sources\ShaderResource.cpp">
+      <Filter>Sources\Resources</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Sources\Resource.cpp">
       <Filter>Sources\Resources</Filter>
     </ClCompile>
   </ItemGroup>
@@ -95,9 +107,6 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\Resource.hpp">
       <Filter>Sources\Resources</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\ShaderResource.hpp">
-      <Filter>Sources\Resources</Filter>
-    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Utils\Storage.hpp">
       <Filter>Sources\Utils</Filter>
     </ClInclude>
@@ -113,7 +122,16 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\ConstantBufferResource.hpp">
       <Filter>Sources\Resources</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\MeshResource.hpp">
+    <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\InputLayoutResource.hpp">
+      <Filter>Sources\Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\BufferResources.hpp">
+      <Filter>Sources\Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\ResourceGroup.h">
+      <Filter>Sources\Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Users\franc\Documents\Visual Studio 2017\Projects\WiredPickup\Game\Sources\Include\Game\Resources\ShaderResource.hpp">
       <Filter>Sources\Resources</Filter>
     </ClInclude>
   </ItemGroup>
@@ -124,5 +142,13 @@
     <FxCompile Include="$(MSBuildThisFileDirectory)Shaders\default_vertex.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="$(MSBuildThisFileDirectory)Cinema 4D\c4d_mesh_exporter.py">
+      <Filter>Cinema 4D</Filter>
+    </None>
+    <None Include="$(MSBuildThisFileDirectory)Cinema 4D\Test.c4d">
+      <Filter>Cinema 4D</Filter>
+    </None>
   </ItemGroup>
 </Project>
