--- a/Game/Game.vcxitems.filters
+++ b/Game/Game.vcxitems.filters
@@ -45,9 +45,6 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Sources\Storage.cpp">
       <Filter>Sources\Utils</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)Sources\Mesh.cpp">
-      <Filter>Sources\Rendering</Filter>
-    </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)Sources\ConstantBufferResource.cpp">
       <Filter>Sources\Resources</Filter>
     </ClCompile>
@@ -64,6 +61,9 @@
       <Filter>Sources\Resources</Filter>
     </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)Sources\Resource.cpp">
+      <Filter>Sources\Resources</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Sources\RasterizerStateResource.cpp">
       <Filter>Sources\Resources</Filter>
     </ClCompile>
   </ItemGroup>
@@ -116,9 +116,6 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Utils\NonCopyable.hpp">
       <Filter>Sources\Utils</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Rendering\Mesh.hpp">
-      <Filter>Sources\Rendering</Filter>
-    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\ConstantBufferResource.hpp">
       <Filter>Sources\Resources</Filter>
     </ClInclude>
@@ -128,10 +125,13 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\BufferResources.hpp">
       <Filter>Sources\Resources</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\ResourceGroup.h">
+    <ClInclude Include="C:\Users\franc\Documents\Visual Studio 2017\Projects\WiredPickup\Game\Sources\Include\Game\Resources\ShaderResource.hpp">
       <Filter>Sources\Resources</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\franc\Documents\Visual Studio 2017\Projects\WiredPickup\Game\Sources\Include\Game\Resources\ShaderResource.hpp">
+    <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\RasterizerStateResource.hpp">
+      <Filter>Sources\Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Users\franc\Documents\Visual Studio 2017\Projects\WiredPickup\Game\Sources\Include\Game\Resources\ResourceGroup.hpp">
       <Filter>Sources\Resources</Filter>
     </ClInclude>
   </ItemGroup>
