--- a/Game/Game.vcxitems.filters
+++ b/Game/Game.vcxitems.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Sources\StateResources.cpp">
       <Filter>Sources\Resources</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)TextureResource.cpp">
+      <Filter>Sources\Resources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Windows.hpp">
@@ -129,6 +132,9 @@
       <Filter>Sources\Resources</Filter>
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\ShaderType.hpp">
+      <Filter>Sources\Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\TextureResource.hpp">
       <Filter>Sources\Resources</Filter>
     </ClInclude>
   </ItemGroup>
