Add simple buffer resources

--- a/Game/Game.vcxitems.filters
+++ b/Game/Game.vcxitems.filters
@@ -140,7 +140,7 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\TextureResource.hpp">
       <Filter>Sources\Resources</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\franc\Documents\Visual Studio 2017\Projects\WiredPickup\Game\Sources\Include\Game\Resources\ShaderResourceViewResource.hpp">
+    <ClInclude Include="$(MSBuildThisFileDirectory)Sources\Include\Game\Resources\ShaderResourceViewResource.hpp">
       <Filter>Sources\Resources</Filter>
     </ClInclude>
   </ItemGroup>
